AI 직업추천 기능 구현 추가

--- a/app/src/main/res/layout/activity_board_inside.xml
+++ b/app/src/main/res/layout/activity_board_inside.xml
@@ -191,7 +191,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/commentBtn" />
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/commentBtn"
                 android:src="@drawable/ic_send"
                 android:layout_width="60dp"
