--- a/app/src/main/res/layout/team_building_list_item.xml
+++ b/app/src/main/res/layout/team_building_list_item.xml
@@ -108,8 +108,8 @@
 
         <ImageView
             android:id="@+id/ivHeart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@drawable/ic_heart"
 
             />
@@ -148,8 +148,8 @@
         <!-- Bookmark Icon ImageView -->
         <ImageView
             android:id="@+id/ivBookmark"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_marginEnd="4dp"
             android:src="@drawable/ic_bookmark"
 
