--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="Gray_700">#6E7377</color>
     <color name="Green_500">#2A9D8F</color>
     <color name="Green_100">#C2DECF</color>
+    <color name="Blue_100">#CECFE5</color>
     <color name="Blue_500">#464AB2</color>
 <!--    2A9D8F-->
 </resources>
