--- a/app/src/main/res/layout/activity_team_building_inside.xml
+++ b/app/src/main/res/layout/activity_team_building_inside.xml
@@ -181,7 +181,7 @@
 
             <ImageView
                 android:id="@+id/commentBtn"
-                android:src="@drawable/ic_send"
+                android:src="@drawable/ic_sending"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 app:layout_constraintEnd_toEndOf="parent"
