--- a/app/src/main/res/layout/fragment_ai_chat.xml
+++ b/app/src/main/res/layout/fragment_ai_chat.xml
@@ -8,14 +8,49 @@
     android:layout_height="match_parent"
     tools:context=".ui.aiChatBot.AiChatFragment">
 
+    <Button
+        android:id="@+id/button_back"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@drawable/ic_back"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="18dp"
+        android:layout_marginStart="20dp" />
+
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="28dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginStart="60dp"
+        android:text="AI 진로상담"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:textColor="@color/Gray_700"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@drawable/ic_setting"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="20dp" />
+
     <com.stfalcon.chatkit.messages.MessagesList
         android:id="@+id/messagesList2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/aiInputLayout"
+        android:layout_marginTop="6dp"
+        android:background="@color/Blue_100"
+        app:layout_constraintTop_toBottomOf="@id/titleTextView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 
 
@@ -34,8 +69,10 @@
             android:layout_height="0dp"
             android:hint="질문을 입력하세요"
             android:background="@color/transparent"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="12dp"
+            android:textColor="@color/gray"
+            android:textSize="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,9 +80,10 @@
 
         <ImageView
             android:id="@+id/aiBtn"
-            android:src="@drawable/ic_send"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:src="@drawable/ic_sending"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginEnd="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
