--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,8 +14,8 @@
             <TextView
                 android:id="@+id/titleTextView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
+                android:layout_height="28dp"
+                android:layout_marginTop="14dp"
                 android:layout_marginStart="26dp"
                 android:text="PathFinder"
                 android:textStyle="bold"
