--- a/app/src/main/res/layout/fragment_team_building.xml
+++ b/app/src/main/res/layout/fragment_team_building.xml
@@ -11,8 +11,8 @@
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="14dp"
             android:layout_marginStart="24dp"
             android:text="프로젝트"
             android:textStyle="bold"
